# brewsty

./: .gitignore  CLAUDE.md  Cargo.toml  IMPROVEMENT_PLAN.md  LICENSE.md  PROJECT_OVERVIEW.md  README.md
.dev/: PROJECT_OVERVIEW.md
.github/workflows/: rust.yml
src/: main.rs
src/application/: mod.rs  use_case_container.rs
src/application/dto/: mod.rs
src/application/use_cases/: mod.rs  package_list_operations.rs  package_operations.rs  service_operations.rs
src/domain/entities/: config.rs  mod.rs  package.rs  package_list.rs  service.rs
src/domain/repositories/: mod.rs  package_list_repository.rs  package_repository.rs  service_repository.rs
src/domain/services/: mod.rs  validation.rs
src/infrastructure/: config_repository.rs  mod.rs
src/infrastructure/brew/: command.rs  mod.rs  package_list_repository.rs  repository.rs  service_repository.rs
src/presentation/: mod.rs  style.rs
src/presentation/components/: cleanup_modal.rs  filter_state.rs  info_modal.rs  log_manager.rs  merged_package_list.rs  mod.rs  package_list.rs  password_modal.rs  selection_state.rs  service_list.rs  tab_manager.rs
src/presentation/services/: async_executor.rs  async_task_manager.rs  event_bus.rs  log_capture.rs  mod.rs  package_operation_handler.rs
src/presentation/ui/: app.rs  mod.rs
src/presentation/ui/tabs/: installed.rs  log.rs  mod.rs  search.rs  services.rs  settings.rs
